Wed Jan 24 14:35:05 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/IndexedStorage.java: Add a missing close()
	statement.

Thu Dec 21 15:39:46 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/QuadTree.java
	  src/org/jcae/mesh/amibe/util/OcTree.java: Replace QuadTree
	and Octree classes by...
	* src/org/jcae/mesh/amibe/util/KdTree.java: generic KdTree.

Sat Dec 16 15:37:16 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java: Fix nextOTriApexLoop().

Fri Dec 15 15:51:58 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java (canContract): Fix
	topology check.
	* src/org/jcae/mesh/amibe/util/QSortedTreeNode.java: Make this an
	inner class of QSortedTree.

Wed Dec 13 07:59:35 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/QSortedTree.java
	  src/org/jcae/mesh/amibe/util/QSortedTreeNode.java: Abstract classes
	to define binary trees.
	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Use these new classes.
	* src/org/jcae/mesh/amibe/util/PRedBlackSortedTree.java: New class,
	red-black tree.

Tue Dec 12 13:15:57 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Update balance
	factors in rotateL() and rotateR() to improve readability.

Mon Dec 11 13:25:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: Fix nextApexLoop().

Tue Dec  5 17:53:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/OTriangle.java: Modify hasAttributes()
	methods so that hasAttributes(FOO|BAR) is equivalent to
	hasAttributes(FOO) || hasAttributes(BAR), this is more natural than
	current behaviour: hasAttributes(FOO) && hasAttributes(BAR).
